--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Victor Hwang
+title: VCFH.work - Product design portfolio of Victor Hwang
 email: vfhwang@gmail.com
 description: | 
  I'm a designer, currently making services and products with Farewill. 
